parsed declarations